feat(auth): Add object RBAC foundation. Refs #88, #89
